tests/baselines/reference/parserX_ArrowFunction3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrowFunctions/parserX_ArrowFunction3.ts (3 errors) ====
    var v = (a): => {
               ~
!!! error TS1005: ',' expected.
                 ~~
!!! error TS1005: ';' expected.
             ~
!!! error TS2304: Cannot find name 'a'.
       
    };